--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/yoga-class-app
-    username: user
-    password: password
+    username: mustafa
+    password: 123456789
   main:
     banner-mode: off
   jpa:
