--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,15 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mapstruct.extensions.spring</groupId>
 			<artifactId>mapstruct-spring-annotations</artifactId>
 			<version>${org.mapstruct.extensions.spring.version}</version>
