--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,10 @@ spring:
     user:
       name: user
       password: 12345
+logging:
+  level:
+    org:
+      springframework:
+        security:
+          web:
+            FilterChainProxy: Debug
