Add JWT Gen/Val and Filters

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,7 @@ logging:
         security:
           web:
             FilterChainProxy: Debug
+
+jwt:
+  secret: jxgEQeXHuPq8VdbyYFNkANdudQ53YUn4
+  header: Authorization
