Add Keycloak security config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,19 @@ spring:
     show-sql: true
     generate-ddl: true
     properties:
-      hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+      hibernate.format_sql: true
+  security:
+    user:
+      name: user
+      password: 12345
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8081/realms/spring
+logging:
+  level:
+    org:
+      springframework:
+        security:
+          web:
+            FilterChainProxy: Debug
