--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,23 @@ services:
       PGADMIN_CONFIG_SERVER_MODE: "False"
     volumes:
       - pgadmin:/var/lib/pgadmin
-
     ports:
       - "5050:80"
     networks:
       - postgres
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.2
+    ports:
+      - "8081:8080"
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    command: start-dev
+    networks:
+      - postgres
+    volumes:
+      - keycloak:/var/lib/keycloak
 
 networks:
   postgres:
@@ -37,3 +49,4 @@ networks:
 volumes:
   postgres:
   pgadmin:
+  keycloak:
