Add keycloak integration with gw and authentication with ds services

--- a/edgeservice/src/main/resources/application.yml
+++ b/edgeservice/src/main/resources/application.yml
@@ -3,9 +3,22 @@ server:
 spring:
   application:
     name: edgeservice
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            client-id: springer
+            client-secret: wdGjvFAHmelEG1B6ODwqZB8oz28HCXK6
+            scope: openid
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8081/realms/spring
   cloud:
     gateway:
       default-filters:
+        - SaveSession
+        - TokenRelay
         - name: RequestRateLimiter
           args:
             redis-rate-limiter:
@@ -13,15 +26,32 @@ spring:
               burstCapacity: 200
               requestedTokens: 1
       routes:
-        - id: user-service
+        - id: user-service-v2
+          uri: http://localhost:8080
+          predicates:
+            - Path=/api/v2/users/**
+          filters:
+            - AddRequestHeader=X-Tenant,yoga-class-v2
+            - name: CircuitBreaker
+              args:
+                name: userService
+                fallbackUri: forward:/users-fallback
+            - name: Retry
+              args:
+                retries: 3
+                method: GET
+                backoff:
+                  firstBackoff: 50ms
+                  maxBackoff: 500ms
+        - id: user-service-v1
           uri: http://localhost:8080
           predicates:
             - Path=/api/v1/users/**
           filters:
-            - AddRequestHeader=X-Tenant,yoga-class
+            - AddRequestHeader=X-Tenant,yoga-class-v1
             - name: CircuitBreaker
               args:
-                name: userService
+                name: userService-v1
                 fallbackUri: forward:/users-fallback
             - name: Retry
               args:
@@ -41,5 +71,5 @@ resilience4j:
         registerHealthIndicator: true
   timelimiter:
     instances:
-      bookService:
+      userService-v1:
         timeoutDuration: 3s
