--- a/yoga-service/src/observability/prometheus-config.yaml
+++ b/yoga-service/src/observability/prometheus-config.yaml
@@ -1,8 +1,10 @@
 global:
-  evaluation_interval: 30s
-  scrape_interval: 5s
+  evaluation_interval: 1s
+  scrape_interval: 1s
 scrape_configs:
-  - job_name: otel-collector
+  - job_name: "otel-collector"
+    metrics_path: /actuator/prometheus
     static_configs:
       - targets:
-          - 'otelcol:8888'
+#          - 'otelcol:8888'
+          - 'host.docker.internal:8080'
