--- a/yoga-service/src/observability/prometheus-config.yaml
+++ b/yoga-service/src/observability/prometheus-config.yaml
@@ -1,10 +1,8 @@
 global:
-  evaluation_interval: 1s
-  scrape_interval: 1s
+  scrape_interval: 10s
+  evaluation_interval: 10s
+
 scrape_configs:
-  - job_name: "otel-collector"
-    metrics_path: /actuator/prometheus
+  - job_name: 'otel-collector'
     static_configs:
-      - targets:
-#          - 'otelcol:8888'
-          - 'host.docker.internal:8080'
+      - targets: ['otel-collector:8889']
