--- a/yoga-service/docker-compose.yml
+++ b/yoga-service/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - postgres:/data/postgres
     ports:
-      - "5432:5432"
+      - 5432:5432
     networks:
       - postgres
 
@@ -25,7 +25,7 @@ services:
     volumes:
       - pgadmin:/var/lib/pgadmin
     ports:
-      - "5050:80"
+      - 5050:80
     networks:
       - postgres
 
@@ -109,13 +109,15 @@ services:
       - postgres
     depends_on:
       - jaeger
+      - zipkin-all-in-one
 
   jaeger:
     image: jaegertracing/all-in-one:latest
     ports:
-      - "16686:16686"
-      - "14268"
-      - "14250"
+      - 16686:16686
+      - 14268
+      - 14250
+      - 4317
     networks:
       - postgres
 
@@ -123,7 +125,16 @@ services:
     image: grafana/loki:latest
     command: -config.file=/etc/loki/local-config.yaml
     ports:
-      - "3100:3100"
+      - 3100:3100
+    networks:
+      - postgres
+
+
+  zipkin-all-in-one:
+    image: openzipkin/zipkin:latest
+    restart: always
+    ports:
+      - 9411:9411
     networks:
       - postgres
 
