--- a/yoga-service/src/main/resources/application.yml
+++ b/yoga-service/src/main/resources/application.yml
@@ -2,11 +2,14 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,prometheus
+        include: health
   otlp:
     metrics:
       export:
         url: http://localhost:4318/v1/metrics
+        steps: 1s
+    tracing:
+      endpoint: http://localhost:4318/v1/traces
   tracing:
     sampling:
       probability: 1.0
