--- a/yoga-service/src/observability/otel-collector.yaml
+++ b/yoga-service/src/observability/otel-collector.yaml
@@ -12,6 +12,13 @@ exporters:
     endpoint: "0.0.0.0:8889"
     const_labels:
       label: mustafa
+  zipkin:
+    endpoint: "http://zipkin-all-in-one:9411/api/v2/spans"
+    format: proto
+  otlp:
+    endpoint: http://jaeger:4317
+    tls:
+      insecure: true
 
 # https://github.com/open-telemetry/opentelemetry-collector/blob/main/extension/README.md
 extensions:
@@ -29,3 +36,7 @@ service:
       receivers: [otlp]
       processors: [batch]
       exporters: [prometheus]
+    traces:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [otlp,zipkin]
