--- a/yoga-service/docker-compose.yml
+++ b/yoga-service/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.5"
 
 services:
   postgres:
@@ -88,7 +87,7 @@ services:
     networks:
       - postgres
     volumes:
-      - grafana:/var/lib/grafana
+      - ./src/observability/grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yml
 
   otel-collector:
     image: otel/opentelemetry-collector-contrib
@@ -115,8 +114,6 @@ services:
     image: jaegertracing/all-in-one:latest
     ports:
       - 16686:16686
-      - 14268
-      - 14250
       - 4317
     networks:
       - postgres
@@ -129,10 +126,20 @@ services:
     networks:
       - postgres
 
+  tempo:
+    image: grafana/tempo:2.4.1
+    command: [ "-config.file=/etc/tempo.yml" ]
+    volumes:
+      - ./src/observability/tempo.yaml:/etc/tempo.yml
+    ports:
+      - 3200:3200  # tempo
+      - 4317  # otlp grpc
+    networks:
+      - postgres
+
 
   zipkin-all-in-one:
     image: openzipkin/zipkin:latest
-    restart: always
     ports:
       - 9411:9411
     networks:
