Add observability to edge service

--- a/edgeservice/src/main/resources/application.yml
+++ b/edgeservice/src/main/resources/application.yml
@@ -1,8 +1,15 @@
 management:
+  endpoints:
+    web:
+      exposure:
+        include: health
   otlp:
     metrics:
       export:
         url: http://localhost:4318/v1/metrics
+        steps: 1s
+    tracing:
+      endpoint: http://localhost:4318/v1/traces
   tracing:
     sampling:
       probability: 1.0
@@ -11,15 +18,8 @@ server:
   port: 9001
 spring:
   application:
-    name: edgeservice
-#  spring:
-#    sleuth:
-#      otel:
-#        config:
-#          trace-id-ratio-based: 1.0
-#        exporter:
-#          otlp:
-#            endpoint: http://collector:4317
+    name: edge-service
+
 
   security:
     oauth2:
